force-app/main/default/objects/Agent_Interaction__c/Agent_Interaction__c.object-meta.xml
<CustomObject>
    <description>Tracks Agentforce session interactions including reservation outcomes and DSAT ratings</description>
    <label>Agent Interaction</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>