force-app/main/default/objects/Agent_Interaction__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <relationshipName>Agent_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>