force-app/main/default/objects/Agent_Interaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <relationshipName>Agent_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>