force-app/main/default/objects/Agent_Interaction__c/fields/DSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Score__c</fullName>
    <label>DSAT Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>